--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.fartyou.thedirtyappstore.ribbit2.LoginActivity">
+    tools:context="com.fartyou.thedirtyappstore.ribbit2.SignUpActivity">
 
     <EditText
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint = "@string/username_hint"/>
+        android:hint="@string/username_hint"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -30,22 +30,24 @@
         android:layout_alignParentStart="true"
         android:hint="@string/password_hint"/>
 
-    <Button
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/login_button_label"
-        android:id="@+id/LoginButton"
+        android:inputType="textEmailAddress"
+        android:ems="10"
+        android:id="@+id/emailField"
         android:layout_below="@+id/passwordField"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        />
+        android:hint="@string/email_hint"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign_up_text"
-        android:id="@+id/signUpText"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-       />
+        android:text="@string/sign_up_button_label"
+        android:id="@+id/signupButton"
+        android:hint="@string/sign_up_button_label"
+        android:layout_below="@+id/emailField"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 </RelativeLayout>
