--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,4 +13,10 @@
         <item android:id="@+id/action_edit_friends"
             android:title="@string/menu_edit_friends_label"
           />
+
+        <item android:id="@+id/action_camera"
+            android:title="@string/menu_camera_label"
+            android:icon="@mipmap/ic_camera_enhance_white_24dp"/>
+              <!--android:showAsAction="always"-->
+
 </menu>
