--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,7 @@
           <!--android:orderInCategory="100"-->
           <!--app:showAsAction="never"/>-->
 
+
       <item android:id="@+id/action_logout"
             android:title="@string/menu_logout_label"
           />
@@ -18,5 +19,11 @@
             android:title="@string/menu_camera_label"
             android:icon="@mipmap/ic_camera_enhance_white_24dp"/>
               <!--android:showAsAction="always"-->
+
+         <item android:id="@+id/action_send"
+            android:title="menu_send_label"
+            android:orderInCategory="100"
+            app:showAsAction="always"
+             android:visible="false"/>
 
 </menu>
